added project structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,1 @@
-smarthomedsm/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
-smarthomedsm/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+SmartHomeCollector/target
