--- a/SmartHomeCollector/pom.xml
+++ b/SmartHomeCollector/pom.xml
@@ -25,6 +25,12 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
+     <dependency>
+        <groupId>org.eclipse.californium</groupId>
+        <artifactId>californium-core</artifactId>
+        <version>3.8.0</version>
+    </dependency>
   </dependencies>
 
   <build>
