--- a/SmartHomeCollector/pom.xml
+++ b/SmartHomeCollector/pom.xml
@@ -31,6 +31,13 @@
         <artifactId>californium-core</artifactId>
         <version>3.8.0</version>
     </dependency>
+
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.33</version>
+    </dependency>
+
   </dependencies>
 
   <build>
