--- a/CoAP-network/temperature-sensor/Makefile
+++ b/CoAP-network/temperature-sensor/Makefile
@@ -3,7 +3,7 @@ CONTIKI_PROJECT = temperature-sensor
 all: $(CONTIKI_PROJECT)
 
 CONTIKI = ../../../..
-MAKE_ROUTING = MAKE_ROUTING_RPL_CLASSIC
+MAKE_ROUTING = MAKE_ROUTING_RPL_LITE
 
 
 MODULES += os/net/app-layer/coap
