--- a/CoAP-network/temperature-actuator/Makefile
+++ b/CoAP-network/temperature-actuator/Makefile
@@ -11,7 +11,7 @@ MODULES_REL += /home/user/.local/lib/python3.10/site-packages/emlearn
 TARGET_LIBFILES += -lm
 INC += /home/user/.local/lib/python3.10/site-packages/emlearn
 CFLAGS += -I/home/iot_ubuntu_intel/.local/lib/python3.10/site-packages/emlearn
-
+CFLAGS  += -DCOAP_OBSERVE_CLIENT_STATEFUL=1
 
 include $(CONTIKI)/Makefile.include
 
